--- a/printer.cfg
+++ b/printer.cfg
@@ -120,7 +120,7 @@ heater_pin: PB2
 sensor_type: EPCOS 100K B57560G104F
 sensor_pin: PC4
 control: pid
-#Os valores abaixo foram tunados para 70 Cº - Prefira refazer o PID PED manualmente.
+#Os valores abaixo foram tunados para 70 Cº - Prefira refazer o PID manualmente.
 pid_kp: 66.371
 pid_ki: 0.846
 pid_kd: 1301.702
