--- a/printer.cfg
+++ b/printer.cfg
@@ -88,7 +88,7 @@ homing_retract_dist: 2.0
 
 [tmc2208 stepper_z]
 uart_pin: PB14
-run_current: 0.7 #A corrente pode ser mais alta, porque o esforço é menor, então gera menos aquecimento.
+run_current: 0.7 #A corrente pode ser mais alta, porque o motor é maior aparentemente, e gera menos aquecimento.
 #hold_current: 0.5
 sense_resistor: 0.150
 stealthchop_threshold: 0 #0 deixará o stealthchop ativado (mais silencioso) - 99999 desativa o stealthchop (+ barulhento, porém supostamente "+ desempenho") --> Deixe ativado por regra, se não souber o que está fazendo.
