--- a/printer.cfg
+++ b/printer.cfg
@@ -178,8 +178,8 @@ timeout: 99999999
 sensor_pin: ^PC14
 control_pin: PC13
 x_offset: -23.0
-y_offset: -14.5 #-14.5 is stock
-z_offset: 2.65
+y_offset: -14.5
+z_offset: 0.1 #deixei um valor bem baixo, para evitar algum acidente. Lembre-se que você precisará setar isso novamente, e esse valor será comentado e substituído.
 speed: 20
 pin_move_time: 0.4
 stow_on_each_sample: False
@@ -209,3 +209,4 @@ pin: PB0
 
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
+#*#
