--- a/macro.cfg
+++ b/macro.cfg
@@ -1,12 +1,6 @@
 [gcode_macro AUTO_Z_OFFSET]
 gcode:
-  {% set BED_TEMP = params.BED_TEMP|default(60)|float %}
-  {% set EXTRUDER_TEMP = params.EXTRUDER_TEMP|default(190)|float %}
-  M140 S{BED_TEMP} #Set the bed temp.
-  M104 S{EXTRUDER_TEMP} #Set the extruder temp.
-  M190 S{BED_TEMP} #Wait for bed temp to stabilize
-  M109 S{EXTRUDER_TEMP} #Wait for extruder temp to stabilize
-  PRTOUCH_PROBE_ZOFFSET
+PRTOUCH_PROBE_ZOFFSET APPLY_Z_ADJUST=1 CLEAR_NOZZLE=1
 
 [gcode_macro PID_EXTRUDER]
 gcode:
