--- a/printer.cfg
+++ b/printer.cfg
@@ -21,16 +21,17 @@
 # Os autores originais dessa configuração foram 0xD34D e bootuz-dinamon.
 # As configurações aqui presentes foram feitas com base em suas configurações
 # e com base na própria configuração orignal da creality do sonic pad.
+# https://github.com/williamcastanho/Ender3_V3_SE_Config
 
 
-[include mainsail.cfg]
+[include mainsail.cfg] #Caso você opte por usar o fluidd terá que trocar por ele aqui, senão dará erro.
 
-[include prtouch.cfg]
+[include prtouch.cfg] #Se você jogar isso aqui para carregar antes que o mainsail dará erro!
 
-[include macro.cfg]
+[include macro.cfg] #Carrega os macros para auxiliar, tal como filament load.
 
 [virtual_sdcard]
-path: ~/printer_data/gcodes
+path: ~/printer_data/gcodes #É o caminho do SD virtual onde são salvos os gcodes.
 on_error_gcode: CANCEL_PRINT
 
 [stepper_x]
@@ -42,16 +43,16 @@ rotation_distance: 40
 endstop_pin: ~!PA5
 position_endstop: -6
 position_min: -6
-position_max: 225
+position_max: 225 #Posição máxima da impressora no eixo X (Direita - esquerda olhando a impressora de frente) - Se mexer nisto precisará alterar o mesh_max - Se não souber o que está fazendo não mude.
 homing_speed: 40
 
 [tmc2208 stepper_x]
 uart_pin: PB12
-run_current: 0.6
-#hold_current: 0.5 #baixará a corrente enquanto o motor não tiver operando, pode ajudar com a temperatura, mas causar micromovimentos involuntários (prefira deixar off)
-sense_resistor: 0.150
+run_current: 0.6 #Corrente de operação do stepper, a princípio não mexa nisso, a menos que saiba muito bem o que esta a fazer.
+#hold_current: 0.5 #baixará a corrente enquanto o motor não tiver operando, pode ajudar com a temperatura, mas pode causar micromovimentos involuntários (prefira deixar off)
+sense_resistor: 0.150 #NÃO MEXA NISSO AQUI
 stealthchop_threshold: 0 #0 deixará o stealthchop ativado (mais silencioso) - 99999 desativa o stealthchop (+ barulhento, porém supostamente "+ desempenho") --> Deixe ativado por regra, se não souber o que está fazendo.
-interpolate: True #Caso opte por 64 microsteps opte por colocar isso em false.
+interpolate: True #Caso opte por 64 microsteps pode colocar isso em false.
 
 [stepper_y]
 step_pin: PB8
@@ -62,14 +63,14 @@ rotation_distance: 40
 endstop_pin: ~!PA6
 position_endstop: -14
 position_min: -14
-position_max: 225
+position_max: 225 #Posição máxima da impressora no eixo Y (Frente - trás, olhando a impressora pela frente) - Se mexer nisto precisará alterar o mesh_max - Se não souber o que está fazendo não mude.
 homing_speed: 40
 
 [tmc2208 stepper_y]
 uart_pin: PB13
-run_current: 0.6
-#hold_current: 0.5 #baixará a corrente enquanto o motor não tiver operando, pode ajudar com a temperatura, mas causar micromovimentos involuntários (prefira deixar off)
-sense_resistor: 0.150
+run_current: 0.6 #Corrente de operação do stepper, a princípio não mexa nisso, a menos que saiba muito bem o que esta a fazer.
+#hold_current: 0.5 #baixará a corrente enquanto o motor não tiver operando, pode ajudar com a temperatura, mas pode causar micromovimentos involuntários (prefira deixar off)
+sense_resistor: 0.150 #NÃO MEXA NISSO AQUI
 stealthchop_threshold: 0 #0 deixará o stealthchop ativado (mais silencioso) - 99999 desativa o stealthchop (+ barulhento, porém supostamente "+ desempenho") --> Deixe ativado por regra, se não souber o que está fazendo.
 interpolate: True #Caso opte por 64 microsteps opte por colocar isso em false.
 
@@ -88,9 +89,9 @@ homing_retract_dist: 2.0
 
 [tmc2208 stepper_z]
 uart_pin: PB14
-run_current: 0.7 #A corrente pode ser mais alta, porque o motor é maior aparentemente, e gera menos aquecimento.
-#hold_current: 0.5
-sense_resistor: 0.150
+run_current: 0.7 #A corrente pode ser mais alta, porque o motor é maior/+forte, aparentemente. Pode até ser aumentado para 0.8, só fui convervador.
+#hold_current: 0.5 #baixará a corrente enquanto o motor não tiver operando, pode ajudar com a temperatura, mas pode causar micromovimentos involuntários (prefira deixar off)
+sense_resistor: 0.150 #NÃO MEXA NISSO AQUI
 stealthchop_threshold: 0 #0 deixará o stealthchop ativado (mais silencioso) - 99999 desativa o stealthchop (+ barulhento, porém supostamente "+ desempenho") --> Deixe ativado por regra, se não souber o que está fazendo.
 interpolate: True
 
@@ -108,7 +109,7 @@ heater_pin: PA1
 sensor_type: EPCOS 100K B57560G104F
 sensor_pin: PC5
 control: pid
-#Os valores abaixo foram tunados para 200 Cº - Prefira refazer o PID manualmente.
+#Os valores abaixo foram tunados para 200 Cº - Prefira refazer o PID manualmente com base nos macros que já vem junto, assim os valores aqui serão comentados, e substituídos.
 pid_Kp: 27.142
 pid_Ki: 1.371
 pid_Kd: 134.351
@@ -120,7 +121,7 @@ heater_pin: PB2
 sensor_type: EPCOS 100K B57560G104F
 sensor_pin: PC4
 control: pid
-#Os valores abaixo foram tunados para 70 Cº - Prefira refazer o PID manualmente.
+#Os valores abaixo foram tunados para 70 Cº - Prefira refazer o PID manualmente com base nos macros que já vem junto, assim os valores aqui serão comentados, e substituídos.
 pid_kp: 66.371
 pid_ki: 0.846
 pid_kd: 1301.702
@@ -141,27 +142,23 @@ fan_speed : 1.0
 
 #Caso você instale fans mais fortes, poderá controlar a velocidade por meio de fan_speed ou por max_power.
 
-[fan]
+[fan] #Essa é a part fan, isto é, a fan que refrigera a peça. É possível controlar sua velocidade pelo max_power também.
 pin: PA0
 max_power: 1.0
-
-#Essa é a part fan, isto é, a fan que refrigera a peça.
 
 [mcu]
 serial: /dev/serial/by-id/usb-1a86_USB_Serial-if00-port0 #LEMBRE DE ATUALIZAR PARA O SEU SERIAL PELO COMANDO: ls /dev/serial/by-id/*
 restart_method: command
 
-[temperature_sensor MCU]
+[temperature_sensor MCU] #Vai mostrar a temperatura da placa interna da impressora.
 sensor_type: temperature_mcu
 min_temp: 10
 max_temp: 100
 
-[temperature_sensor External Computer]
+[temperature_sensor External Computer] #Você pode modificar o termo 'External Computer' pelo nome que você quiser, isso aparece na parte que mostra as temperaturas.
 sensor_type: temperature_host
 min_temp: 10
 max_temp: 100 
-
-#Você pode modificar o termo 'External Computer' pelo nome que você quiser, isso aparece na parte que mostra as temperaturas.
 
 [printer]
 kinematics: cartesian
@@ -171,7 +168,7 @@ max_z_velocity: 100
 square_corner_velocity: 5.0
 max_z_accel: 500
 
-[idle_timeout]
+[idle_timeout] #isso evita que quando você sete uma temperatura após um tempo a impressora zere, mas se você esquecer ficará ligado sem parar.
 timeout: 99999999
 
 [bltouch]
