--- a/printer.cfg
+++ b/printer.cfg
@@ -162,11 +162,13 @@ max_temp: 100
 
 [printer]
 kinematics: cartesian
-max_velocity: 300
-max_accel: 3000
+max_velocity: 240 #250 é o máximo estipulado pela creality, mas nessa velocidade começou a pular steps.
+max_accel: 4000 #O limite padrão estipulado pela creality é 4000. Eu até consegui aceleração maior, mas isso caberá a você tunar se quiser (se não sabe o que é não mexa)
 max_z_velocity: 100
 square_corner_velocity: 5.0
 max_z_accel: 500
+
+#Os valos acima de velocidade e aceleração são/podem ser modificados pelo slicer.
 
 [idle_timeout] #isso evita que quando você sete uma temperatura após um tempo a impressora zere, mas se você esquecer ficará ligado sem parar.
 timeout: 99999999
