--- a/printer.cfg
+++ b/printer.cfg
@@ -23,7 +23,6 @@
 # e com base na própria configuração orignal da creality do sonic pad.
 # https://github.com/williamcastanho/Ender3_V3_SE_Config
 
-
 [include mainsail.cfg] #Caso você opte por usar o fluidd terá que trocar por ele aqui, senão dará erro.
 
 [include prtouch.cfg] #Se você jogar isso aqui para carregar antes que o mainsail dará erro!
@@ -34,6 +33,19 @@
 path: ~/printer_data/gcodes #É o caminho do SD virtual onde são salvos os gcodes.
 on_error_gcode: CANCEL_PRINT
 
+[mcu]
+serial: /dev/serial/by-id/usb-1a86_USB_Serial-if00-port0 #LEMBRE DE ATUALIZAR PARA O SEU SERIAL PELO COMANDO: ls /dev/serial/by-id/*
+restart_method: command
+
+[force_move]
+enable_force_move: True
+
+[pause_resume]
+recover_velocity: 50
+
+[idle_timeout] #isso evita que quando você sete uma temperatura após um tempo a impressora zere, mas se você esquecer ficará ligado sem parar.
+timeout: 99999999
+
 [stepper_x]
 step_pin: PC2
 dir_pin: !PB9
@@ -41,8 +53,8 @@ enable_pin: !PC3
 microsteps: 16
 rotation_distance: 40
 endstop_pin: ~!PA5
-position_endstop: -6
-position_min: -6
+position_endstop: -6.1
+position_min: -6.1
 position_max: 225 #Posição máxima da impressora no eixo X (Direita - esquerda olhando a impressora de frente) - Se mexer nisto precisará alterar o mesh_max - Se não souber o que está fazendo não mude.
 homing_speed: 40
 
@@ -61,8 +73,8 @@ enable_pin: !PC3
 microsteps: 16
 rotation_distance: 40
 endstop_pin: ~!PA6
-position_endstop: -14
-position_min: -14
+position_endstop: -14.3
+position_min: -14.3
 position_max: 225 #Posição máxima da impressora no eixo Y (Frente - trás, olhando a impressora pela frente) - Se mexer nisto precisará alterar o mesh_max - Se não souber o que está fazendo não mude.
 homing_speed: 40
 
@@ -116,6 +128,12 @@ pid_Kd: 134.351
 min_temp: 0
 max_temp: 260
 
+[verify_heater extruder]
+max_error: 120
+check_gain_time: 20
+hysteresis: 5
+heating_gain: 2
+
 [heater_bed]
 heater_pin: PB2
 sensor_type: EPCOS 100K B57560G104F
@@ -127,6 +145,12 @@ pid_ki: 0.846
 pid_kd: 1301.702
 min_temp: 0
 max_temp: 100
+
+[verify_heater heater_bed]
+max_error: 120
+check_gain_time: 60
+hysteresis: 5
+heating_gain: 2
 
 [heater_fan hotend_fan]
 pin: PC1
@@ -140,15 +164,12 @@ heater:extruder
 heater_temp : 50
 fan_speed : 1.0
 
-#Caso você instale fans mais fortes, poderá controlar a velocidade por meio de fan_speed ou por max_power.
-
-[fan] #Essa é a part fan, isto é, a fan que refrigera a peça. É possível controlar sua velocidade pelo max_power também.
+[fan] #Part Fan
 pin: PA0
 max_power: 1.0
 
-[mcu]
-serial: /dev/serial/by-id/usb-1a86_USB_Serial-if00-port0 #LEMBRE DE ATUALIZAR PARA O SEU SERIAL PELO COMANDO: ls /dev/serial/by-id/*
-restart_method: command
+[output_pin MainBoardFan]
+pin: !PB1
 
 [temperature_sensor MCU] #Vai mostrar a temperatura da placa interna da impressora.
 sensor_type: temperature_mcu
@@ -160,7 +181,7 @@ sensor_type: temperature_host
 min_temp: 10
 max_temp: 100 
 
-[printer]
+[printer] #Os valos de velocidade e aceleração são/podem ser modificados pelo slicer.
 kinematics: cartesian
 max_velocity: 240 #250 é o máximo estipulado pela creality, mas nessa velocidade começou a pular steps.
 max_accel: 4000 #O limite padrão estipulado pela creality é 4000. Eu até consegui aceleração maior, mas isso caberá a você tunar se quiser (se não sabe o que é não mexa)
@@ -168,35 +189,37 @@ max_z_velocity: 100
 square_corner_velocity: 5.0
 max_z_accel: 500
 
-#Os valos acima de velocidade e aceleração são/podem ser modificados pelo slicer.
-
-[idle_timeout] #isso evita que quando você sete uma temperatura após um tempo a impressora zere, mas se você esquecer ficará ligado sem parar.
-timeout: 99999999
-
 [bltouch]
 sensor_pin: ^PC14
 control_pin: PC13
-x_offset: -23.0
-y_offset: -14.5
+x_offset: -24.5
+y_offset: -20.5
 z_offset: 0.1 #deixei um valor bem baixo, para evitar algum acidente. Lembre-se que você precisará setar isso novamente, e esse valor será comentado e substituído.
-speed: 20
+speed: 5
+lift_speed: 20
+samples: 2 #Fará o probe duas vezes em cada ponto, se você usar mesh adaptativo não faz sentido, pois demorará muito.
+samples_result: average
 pin_move_time: 0.4
 stow_on_each_sample: False
 probe_with_touch_mode: True
 
 [safe_z_home]
-home_xy_position: 134,123
+home_xy_position: 137,133
 speed: 150
 z_hop: 10
-z_hop_speed: 10
+z_hop_speed: 15
 
 [bed_mesh]
-speed: 120
-horizontal_move_z: 5
-mesh_min: 30,30         # Need to handle head distance with cr-touch (bl_touch)
-mesh_max: 202,210.5     # Max probe range (225-23,225-14.5) --> Se você modificar os valores máximos nos eixos precisará mudar isso (se não sabe o que é não precisa mexer)
+speed: 150
+horizontal_move_z: 8
+mesh_min: 30,30         #É usado para lidar com a distância do cr-touch (bl_touch)
+mesh_max: 200.5,204.5     #Distância máxima para os pontos de prova (225-24.5,225-20.5)
 probe_count: 5,5
+fade_start: 1
+fade_end: 10
+fade_target: 0
 algorithm: bicubic
+bicubic_tension: 0.2
 
 # [display]
 # NOT IMPLEMTED (assuming it even works)
