--- a/printer.cfg
+++ b/printer.cfg
@@ -168,8 +168,8 @@ fan_speed : 1.0
 pin: PA0
 max_power: 1.0
 
-[output_pin MainBoardFan]
-pin: !PB1
+#[output_pin MainBoardFan]
+#pin: !PB1
 
 [temperature_sensor MCU] #Vai mostrar a temperatura da placa interna da impressora.
 sensor_type: temperature_mcu
@@ -192,10 +192,10 @@ max_z_accel: 500
 [bltouch]
 sensor_pin: ^PC14
 control_pin: PC13
-x_offset: -24.5
-y_offset: -20.5
-z_offset: 0.1 #deixei um valor bem baixo, para evitar algum acidente. Lembre-se que você precisará setar isso novamente, e esse valor será comentado e substituído.
-speed: 5
+x_offset: -23.0
+y_offset: -14.5
+z_offset: 0 #deixei um valor bem baixo, para evitar algum acidente. Lembre-se que você precisará setar isso novamente, e esse valor será comentado e substituído.
+speed: 10
 lift_speed: 20
 samples: 2 #Fará o probe duas vezes em cada ponto, se você usar mesh adaptativo não faz sentido, pois demorará muito.
 samples_result: average
